--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">No tutorials yet</a></li>
+              <li class="dd-header">Beginner</li>
+              <li><a href="http://wehavecookies56.co.uk/Minecraft-Forge-Tutorials/first_mod">Your first mod</a></li>
+              <li role="separator" class="divider"></li>
+              <li class="dd-header">Intermediate</li>
+              <li role="separator" class="divider"></li>
+              <li class="dd-header">Advanced</li>
             </ul>
           </li>
           <li class="dropdown">
